# AMI-LEARNING

./: BOOTSTRAP.md  COMPARISON-BOOTSTRAP-APPROACHES.md  SPEC-LEARNING.md  SPEC-SELF-MODERATING-REASONER.md  SYNTHESIS-OPENAMI-BOOTSTRAP.md  pyproject.toml
