[project]
name = "ami-learning"
version = "0.1.0"
description = "Learning and research documentation for AMI"
readme = "SPEC-LEARNING.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ami_learning"]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "mypy>=1.14.1",
]
